feat(CommandFacadeSingleton): aplicar fachadas, falta testar